# SMA

./: README.md
RMD/: CMakeLists.txt  package.xml
RMD/launch/: controlc.launch  controlh.launch  sma.launch
RMD/meshes/: L_Link.STL  base_link.STL
RMD/scripts/: Seguimiento.py  controlc1.py  controlc10.py  controlc2.py  controlc3.py  controlc4.py  controlc5.py  controlc6.py  controlc7.py  controlc8.py  controlc9.py  controlh1.py  controlh10.py  controlh2.py  controlh3.py  controlh4.py  controlh5.py  controlh6.py  controlh7.py  controlh8.py  controlh9.py
RMD/urdf/: RMD.urdf  RMD.xacro  RMD1.xacro  RMD10.xacro  RMD2.xacro  RMD3.xacro  RMD4.xacro  RMD5.xacro  RMD6.xacro  RMD7.xacro  RMD8.xacro  RMD9.xacro
